fix phone title too big

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -185,7 +185,7 @@ a {
 }
 
 .phone_title {
-    font-size: smaller;
+    font-size: small;
     display: none;
 }
 
